Vertically aligned images in gallery, adjusted animations, corrected font of slide numbers

--- a/projects/sass/_media-proj.scss
+++ b/projects/sass/_media-proj.scss
@@ -1,6 +1,5 @@
 // Media
 
-
 @media screen and (max-width: 600px) {
 	.navbar {
 		float: none;
@@ -59,11 +58,6 @@
 @media only screen and (max-device-width: 800px) and (orientation: landscape) {
 	.modal {
 		padding-top: 40px;
-		height: 100vh;
-	}
-
-	.mySlides {
-		height: 100%;
 	}
 
 	.caption-container, .dot-container {
